# Discord_SurrealismUI

./: Cargo.toml
ui/: global.slint
ui/components/: index.slint
ui/components/chat/: chat.slint
ui/components/friend/: friend.slint  left.slint
ui/components/list/: list.slint
ui/views/: main.slint
